# SQL-Agent

./: README.md  full_schema.json  package-lock.json  package.json  pyproject.toml
File_system_test/: schema.json  table_names.txt
rag/: doc.py  get_schema.ipynb  langchain_sql_test.py  mcp_test.py  output.json  supabase_api_test.py
rag/classes/: chunks.json  compare_search.ipynb  db_schema_builder.py  db_schema_extractor.py  docs.json  documents.json  example_usage.py  logging_config.py  push_embeddings.ipynb  truncate.ipynb
splitter/: splitter.py
