[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.74",
    "langchain-huggingface>=0.3.1",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.6",
    "langgraph-checkpoint>=2.1.1",
    "langgraph-sdk>=0.2.2",
    "langsmith>=0.4.15",
    "mcp>=1.13.0",
    "pip>=25.2",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.7.2",
    "supabase>=2.18.1",
]
